--- a/mywebsite/resume.html
+++ b/mywebsite/resume.html
@@ -59,7 +59,7 @@
                         <UL>
                             <li>Detail-oriented</li>
                             <li>Problem-solving</li>
-                            <li>Dilligent</li>
+                            <li>Diligent</li>
                             <li>Woodworking</li>
                             <li>Social Media</li>
                             <li>Dependable</li>
@@ -68,7 +68,7 @@
                         <h2>Work Experience</h2>
                         <p>Assistant Shipping Manager - Notable Wood Design - 2025</p>
                         <Ul>
-                            <li>Carefully packaged and prepared custom wood shelves and mantels for shipment, ensuring optimal protection during transit.</li>
+                            <li>Carefully packaged and prepared custom wood shelves and mantles for shipment, ensuring optimal protection during transit.</li>
                             <li>Utilized woodworking equipment to design and assemble custom crates tailored for shipping.</li>
                             <li>Ensured precise order fulfillment, verified delivery destinations, and maintained detailed shipping documentation.</li>
                         </Ul>
